// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`resetIndex modified 1`] = `
Array [
  "a.txt",
  "b.txt",
  "d.txt",
]
`;

exports[`resetIndex modified 2`] = `
Array [
  "a.txt",
  "b.txt",
  "d.txt",
]
`;

exports[`resetIndex new 1`] = `
Array [
  "a.txt",
  "b.txt",
  "d.txt",
]
`;

exports[`resetIndex new 2`] = `
Array [
  "a.txt",
  "b.txt",
]
`;
